# matchbox-window-manager

./: COMPLIANCE  ChangeLog  README  configure.ac  matchbox-window-manager.doap
data/: Makefile.am  kbdconfig
data/schemas/: Makefile.am
data/themes/: Makefile.am
data/themes/Default/: theme.xml
data/themes/MBOpus/: Makefile.am  theme.desktop  theme.xml
data/themes/blondie/: theme.xml
data/themes/bluebox/: Makefile.am  buttclosedown.xpm  buttcloseup.xpm  buttmenudown.xpm  buttmenuup.xpm  buttsmallclosedown.xpm  buttsmallcloseup.xpm  buttsmallmaxdown.xpm  buttsmallmaxup.xpm  buttsmallmindown.xpm  buttsmallminup.xpm  theme.desktop  theme.xml  titlebg.xpm  titleleft.xpm  titleright.xpm
data/themes/borillo/: Makefile.am  theme.desktop  theme.xml
src/: Makefile.am  base_client.c  base_client.h  client_common.c  client_common.h  composite-engine.c  composite-engine.h  desktop_client.c  desktop_client.h  dialog_client.c  dialog_client.h  dockbar_client.c  dockbar_client.h  ewmh.c  ewmh.h  keys.c  keys.h  list.c  list.h  main.c  main_client.c  main_client.h  matchbox-remote.c  mbtheme-standalone.c  mbtheme-standalone.h  mbtheme.c  mbtheme.h  misc.c  misc.h  select_client.c  select_client.h  session.c  session.h  stack.c  stack.h  structs.h  toolbar_client.c  toolbar_client.h  toolbar_client_alt.c  wm.c  (+3 more)
