xpms = buttclosedown.xpm       buttsmallcloseup.xpm                 \
       buttcloseup.xpm         buttsmallmaxdown.xpm  titlebg.xpm    \
       buttmenudown.xpm        buttsmallmaxup.xpm    titleleft.xpm  \
       buttmenuup.xpm          buttsmallmindown.xpm  titleright.xpm \
       buttsmallclosedown.xpm  buttsmallminup.xpm   




themesdir = $(datadir)/themes/bluebox/matchbox
themes_DATA = theme.xml $(xpms) theme.desktop

EXTRA_DIST = theme.xml $(xpms) theme.desktop

